--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
+        <module>usercenter-comm</module>
+        <module>usercenter-dal</module>
         <module>usercenter-biz</module>
         <module>usercenter-provider</module>
-        <module>usercenter-dal</module>
+        <module>usercenter-api</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -14,7 +16,7 @@
         <version>2.2.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.smartwork</groupId>
+    <groupId>org.smartwork</groupId>
     <artifactId>smartwork_usercenter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>smartwork_usercenter</name>
@@ -30,6 +32,10 @@
             <groupId>org.forbes</groupId>
             <artifactId>forbes-comm</artifactId>
             <version>${comm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -100,6 +106,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
