--- a/usercenter-comm/pom.xml
+++ b/usercenter-comm/pom.xml
@@ -8,15 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>usercenter-biz</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.smartwork</groupId>
-            <artifactId>usercenter-dal</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>usercenter-comm</artifactId>
     <build>
         <plugins>
             <!-- 打包跳过测试 -->
