--- a/usercenter-dal/pom.xml
+++ b/usercenter-dal/pom.xml
@@ -4,13 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>smartwork_usercenter</artifactId>
-        <groupId>com.smartwork</groupId>
+        <groupId>org.smartwork</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>usercenter-dal</artifactId>
-
     <build>
         <plugins>
             <!-- 打包跳过测试 -->
