--- a/usercenter-provider/pom.xml
+++ b/usercenter-provider/pom.xml
@@ -4,21 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>smartwork_usercenter</artifactId>
-        <groupId>com.smartwork</groupId>
+        <groupId>org.smartwork</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
     <artifactId>usercenter-provider</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.smartwork</groupId>
+            <groupId>org.smartwork</groupId>
             <artifactId>usercenter-dal</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.smartwork</groupId>
+            <groupId>org.smartwork</groupId>
             <artifactId>usercenter-biz</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
