--- a/usercenter-provider/src/main/resources/application-prod.properties
+++ b/usercenter-provider/src/main/resources/application-prod.properties
@@ -3,21 +3,21 @@ server.context-path=/
 spring.application.name=usercenter
 agency_port=8863
 # 是否开启自我保护模式
-eureka.server.enable-self-preservation = false
+eureka.server.enable-self-preservation=false
 # 续期时间，即扫描失效服务的间隔时间（缺省为60*1000ms）
-eureka.server.eviction-interval-timer-in-ms = 5000
+eureka.server.eviction-interval-timer-in-ms=5000
 spring.cloud.discovery.client.health-indicator.enabled=false
-spring.cloud.discovery.client.registration.enabled = false
+spring.cloud.discovery.client.registration.enabled=false
 # 心跳时间，即服务续约间隔时间（缺省为30s）
-eureka.instance.lease-renewal-interval-in-seconds = 5     
+eureka.instance.lease-renewal-interval-in-seconds=5     
 # 发呆时间，即服务续约到期时间（缺省为90s）
-eureka.instance.lease-expiration-duration-in-seconds = 15 
+eureka.instance.lease-expiration-duration-in-seconds=15 
 # 对于同一个进程，既可以作为注册中心的服务端，也可以作为注册中心的客户端，在本例中，注册中心提供单一的注册服务功能，不提供其他接口服务能力，所以设置为false，最终不作为服务实例注册在注册中心中供其他服务调用。
 eureka.client.register-with-eureka=true
 #表示表示是否从EurekaServer获取注册信息，默认为true。单节点不需要同步其他的EurekaServer节点的数据
 eureka.client.fetch-registry=true
 # 拉取服务注册信息间隔（缺省为30s）
-eureka.client.registry-fetch-interval-seconds = 10 
+eureka.client.registry-fetch-interval-seconds=10 
 eureka.client.service-url.defaultZone=http://172.17.16.15:8861/eureka/
 # zipkin
 #指定zipkin服务端的url
@@ -30,7 +30,7 @@ management.endpoints.web.exposure.include=metrics,httptrace
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 spring.redis.database=1
-spring.redis.host=172.17.32.5
+spring.redis.host=127.0.0.1
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.max-wait=-1ms
@@ -66,7 +66,18 @@ spring.datasource.dynamic.druid.poolPreparedStatements=true
 spring.datasource.dynamic.druid.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.dynamic.druid.filters=stat,wall,slf4j
 spring.datasource.dynamic.druid.connectionProperties=druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
-spring.datasource.dynamic.datasource.master.url=jdbc:mysql://172.17.32.5:3306/smartworkuser?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+spring.datasource.dynamic.datasource.master.url=jdbc:mysql://172.17.16.15:4408/smartworkuser?characterEncoding=UTF-8&useUnicode=true&useSSL=false
 spring.datasource.dynamic.datasource.master.username=smartworkuser
-spring.datasource.dynamic.datasource.master.password=KWxAkpcaSEeHFK65
+spring.datasource.dynamic.datasource.master.password=hnX5HajpDaHWLFyS
 spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+# kafka配置
+spring.kafka.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id=default_consumer_group
+# 自动提交
+spring.kafka.consumer.enable-auto-commit=true
+# 自动提交时间间隔
+spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
