--- a/usercenter-provider/src/main/resources/application-prod.properties
+++ b/usercenter-provider/src/main/resources/application-prod.properties
@@ -71,13 +71,19 @@ spring.datasource.dynamic.datasource.master.username=smartworkuser
 spring.datasource.dynamic.datasource.master.password=hnX5HajpDaHWLFyS
 spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
 # kafka配置
-spring.kafka.bootstrap-servers=127.0.0.1:9092
+spring.kafka.bootstrap-servers=172.17.16.4:9092
+spring.kafka.producer.retries=1
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.consumer.group-id=default_consumer_group
+spring.kafka.producer.properties.linger.ms=1
 # 自动提交
-spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.enable-auto-commit=false
 # 自动提交时间间隔
-spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.consumer.auto-commit-interval=100ms
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.session.timeout.ms=15000
+# 版本号
+smartwork.verision = /api/v1.0
