'增加注册手机号验证'

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>usercenter-biz</module>
         <module>usercenter-provider</module>
         <module>usercenter-api</module>
+        <module>usercenter-member</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
