--- a/usercenter-provider/src/main/resources/application-prod.properties
+++ b/usercenter-provider/src/main/resources/application-prod.properties
@@ -70,6 +70,12 @@ spring.datasource.dynamic.datasource.master.url=jdbc:mysql://172.17.16.15:4408/s
 spring.datasource.dynamic.datasource.master.username=smartworkuser
 spring.datasource.dynamic.datasource.master.password=hnX5HajpDaHWLFyS
 spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+# member配置数据源
+spring.datasource.dynamic.datasource.memberds.url=jdbc:mysql://172.17.16.15:4408/smartworkmember?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.dynamic.datasource.memberds.username=smartworkmember
+spring.datasource.dynamic.datasource.memberds.password=TSrecFBRhy5KjWRp
+spring.datasource.dynamic.datasource.memberds.driver-class-name=com.mysql.jdbc.Driver
+
 # kafka配置
 spring.kafka.bootstrap-servers=172.17.16.4:9092
 spring.kafka.producer.retries=1
