--- a/usercenter-member/pom.xml
+++ b/usercenter-member/pom.xml
@@ -8,21 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>usercenter-biz</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.smartwork</groupId>
-            <artifactId>usercenter-dal</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.smartwork</groupId>
-            <artifactId>usercenter-member</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>usercenter-member</artifactId>
     <build>
         <plugins>
             <!-- 打包跳过测试 -->
@@ -34,5 +20,16 @@
                 </configuration>
             </plugin>
         </plugins>
+        <!--打包XML文件-->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 </project>
