性能监控增加

--- a/usercenter-provider/src/main/resources/application-prod.properties
+++ b/usercenter-provider/src/main/resources/application-prod.properties
@@ -93,3 +93,7 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.kafka.consumer.properties.session.timeout.ms=15000
 # 版本号
 smartwork.verision = /api/v1.0
+
+# 性能监控
+spring.boot.admin.client.url=http://172.17.16.4:8870
+management.endpoints.web.exposure.include=*
